[package]
name = "diesel-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.0", features = ["chrono", "postgres"] }
serde = { version = "1.0.152", features = ["derive"] }
